set an akka restart strategy and require a minimum cluster size of 2 for discovery cluster formation (#7525)
* set an akka restart strategy and require a minimum cluster size of 2 for discovery cluster formation

* Change to internal behaviour of akka requires a small change to AkkaDiscoveryUncleanShutdownIT

* Single nodes no longer come 'Up' in akka

* Changes after code review

* PR feedback - remove unnecessary code paths and improve method names and documentation around ClusterJoiningActor